:hammer: add renv package version control to project

--- a/output/all_part-time_report.html
+++ b/output/all_part-time_report.html
@@ -378,12 +378,12 @@ numbers for part-time all individuals from 2019-01 to 2022-03.</p>
 <p>This table displays the adjusted labour force numbers and adjusted
 change in labour force numbers for part-time all individuals for the
 last 12 months, from 2021-05 to 2022-03.</p>
-<div id="ktrkfyefzq" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<div id="hotwyidmrx" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
 <style>html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#ktrkfyefzq .gt_table {
+#hotwyidmrx .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -408,7 +408,7 @@ last 12 months, from 2021-05 to 2022-03.</p>
   border-left-color: #D3D3D3;
 }
 
-#ktrkfyefzq .gt_heading {
+#hotwyidmrx .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -420,7 +420,7 @@ last 12 months, from 2021-05 to 2022-03.</p>
   border-right-color: #D3D3D3;
 }
 
-#ktrkfyefzq .gt_title {
+#hotwyidmrx .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -432,7 +432,7 @@ last 12 months, from 2021-05 to 2022-03.</p>
   border-bottom-width: 0;
 }
 
-#ktrkfyefzq .gt_subtitle {
+#hotwyidmrx .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -444,13 +444,13 @@ last 12 months, from 2021-05 to 2022-03.</p>
   border-top-width: 0;
 }
 
-#ktrkfyefzq .gt_bottom_border {
+#hotwyidmrx .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#ktrkfyefzq .gt_col_headings {
+#hotwyidmrx .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -465,7 +465,7 @@ last 12 months, from 2021-05 to 2022-03.</p>
   border-right-color: #D3D3D3;
 }
 
-#ktrkfyefzq .gt_col_heading {
+#hotwyidmrx .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -485,7 +485,7 @@ last 12 months, from 2021-05 to 2022-03.</p>
   overflow-x: hidden;
 }
 
-#ktrkfyefzq .gt_column_spanner_outer {
+#hotwyidmrx .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -497,15 +497,15 @@ last 12 months, from 2021-05 to 2022-03.</p>
   padding-right: 4px;
 }
 
-#ktrkfyefzq .gt_column_spanner_outer:first-child {
+#hotwyidmrx .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#ktrkfyefzq .gt_column_spanner_outer:last-child {
+#hotwyidmrx .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#ktrkfyefzq .gt_column_spanner {
+#hotwyidmrx .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -517,7 +517,7 @@ last 12 months, from 2021-05 to 2022-03.</p>
   width: 100%;
 }
 
-#ktrkfyefzq .gt_group_heading {
+#hotwyidmrx .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -542,7 +542,7 @@ last 12 months, from 2021-05 to 2022-03.</p>
   vertical-align: middle;
 }
 
-#ktrkfyefzq .gt_empty_group_heading {
+#hotwyidmrx .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -557,15 +557,15 @@ last 12 months, from 2021-05 to 2022-03.</p>
   vertical-align: middle;
 }
 
-#ktrkfyefzq .gt_from_md > :first-child {
+#hotwyidmrx .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#ktrkfyefzq .gt_from_md > :last-child {
+#hotwyidmrx .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#ktrkfyefzq .gt_row {
+#hotwyidmrx .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -584,7 +584,7 @@ last 12 months, from 2021-05 to 2022-03.</p>
   overflow-x: hidden;
 }
 
-#ktrkfyefzq .gt_stub {
+#hotwyidmrx .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -597,7 +597,7 @@ last 12 months, from 2021-05 to 2022-03.</p>
   padding-right: 5px;
 }
 
-#ktrkfyefzq .gt_stub_row_group {
+#hotwyidmrx .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -611,11 +611,11 @@ last 12 months, from 2021-05 to 2022-03.</p>
   vertical-align: top;
 }
 
-#ktrkfyefzq .gt_row_group_first td {
+#hotwyidmrx .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#ktrkfyefzq .gt_summary_row {
+#hotwyidmrx .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -625,16 +625,16 @@ last 12 months, from 2021-05 to 2022-03.</p>
   padding-right: 5px;
 }
 
-#ktrkfyefzq .gt_first_summary_row {
+#hotwyidmrx .gt_first_summary_row {
   border-top-style: solid;
   border-top-color: #D3D3D3;
 }
 
-#ktrkfyefzq .gt_first_summary_row.thick {
+#hotwyidmrx .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#ktrkfyefzq .gt_last_summary_row {
+#hotwyidmrx .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -644,7 +644,7 @@ last 12 months, from 2021-05 to 2022-03.</p>
   border-bottom-color: #D3D3D3;
 }
 
-#ktrkfyefzq .gt_grand_summary_row {
+#hotwyidmrx .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -654,7 +654,7 @@ last 12 months, from 2021-05 to 2022-03.</p>
   padding-right: 5px;
 }
 
-#ktrkfyefzq .gt_first_grand_summary_row {
+#hotwyidmrx .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -664,11 +664,11 @@ last 12 months, from 2021-05 to 2022-03.</p>
   border-top-color: #D3D3D3;
 }
 
-#ktrkfyefzq .gt_striped {
+#hotwyidmrx .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#ktrkfyefzq .gt_table_body {
+#hotwyidmrx .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -677,7 +677,7 @@ last 12 months, from 2021-05 to 2022-03.</p>
   border-bottom-color: #D3D3D3;
 }
 
-#ktrkfyefzq .gt_footnotes {
+#hotwyidmrx .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -691,7 +691,7 @@ last 12 months, from 2021-05 to 2022-03.</p>
   border-right-color: #D3D3D3;
 }
 
-#ktrkfyefzq .gt_footnote {
+#hotwyidmrx .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-left: 4px;
@@ -700,7 +700,7 @@ last 12 months, from 2021-05 to 2022-03.</p>
   padding-right: 5px;
 }
 
-#ktrkfyefzq .gt_sourcenotes {
+#hotwyidmrx .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -714,7 +714,7 @@ last 12 months, from 2021-05 to 2022-03.</p>
   border-right-color: #D3D3D3;
 }
 
-#ktrkfyefzq .gt_sourcenote {
+#hotwyidmrx .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -722,36 +722,36 @@ last 12 months, from 2021-05 to 2022-03.</p>
   padding-right: 5px;
 }
 
-#ktrkfyefzq .gt_left {
+#hotwyidmrx .gt_left {
   text-align: left;
 }
 
-#ktrkfyefzq .gt_center {
+#hotwyidmrx .gt_center {
   text-align: center;
 }
 
-#ktrkfyefzq .gt_right {
+#hotwyidmrx .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#ktrkfyefzq .gt_font_normal {
+#hotwyidmrx .gt_font_normal {
   font-weight: normal;
 }
 
-#ktrkfyefzq .gt_font_bold {
+#hotwyidmrx .gt_font_bold {
   font-weight: bold;
 }
 
-#ktrkfyefzq .gt_font_italic {
+#hotwyidmrx .gt_font_italic {
   font-style: italic;
 }
 
-#ktrkfyefzq .gt_super {
+#hotwyidmrx .gt_super {
   font-size: 65%;
 }
 
-#ktrkfyefzq .gt_two_val_uncert {
+#hotwyidmrx .gt_two_val_uncert {
   display: inline-block;
   line-height: 1em;
   text-align: right;
@@ -760,31 +760,31 @@ last 12 months, from 2021-05 to 2022-03.</p>
   margin-left: 0.1em;
 }
 
-#ktrkfyefzq .gt_footnote_marks {
+#hotwyidmrx .gt_footnote_marks {
   font-style: italic;
   font-weight: normal;
   font-size: 75%;
   vertical-align: 0.4em;
 }
 
-#ktrkfyefzq .gt_asterisk {
+#hotwyidmrx .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#ktrkfyefzq .gt_slash_mark {
+#hotwyidmrx .gt_slash_mark {
   font-size: 0.7em;
   line-height: 0.7em;
   vertical-align: 0.15em;
 }
 
-#ktrkfyefzq .gt_fraction_numerator {
+#hotwyidmrx .gt_fraction_numerator {
   font-size: 0.6em;
   line-height: 0.6em;
   vertical-align: 0.45em;
 }
 
-#ktrkfyefzq .gt_fraction_denominator {
+#hotwyidmrx .gt_fraction_denominator {
   font-size: 0.6em;
   line-height: 0.6em;
   vertical-align: -0.05em;
@@ -851,7 +851,7 @@ last 12 months, from 2021-05 to 2022-03.</p>
 </table>
 </div>
 <hr />
-<p>Report last updated on 2022-05-07 from the <a href="https://www.abs.gov.au/statistics/labour/employment-and-unemployment/labour-force-australia/latest-release">ABS
+<p>Report last updated on 2022-05-08 from the <a href="https://www.abs.gov.au/statistics/labour/employment-and-unemployment/labour-force-australia/latest-release">ABS
 labour force dataset</a></p>
 </div>
 
