--- a/output/all_part-time_report.html
+++ b/output/all_part-time_report.html
@@ -612,212 +612,84 @@ of labour force numbers and changes in the last 12 months</h3>
 <p>This table displays the adjusted labour force numbers and adjusted
 change in labour force numbers for part-time all individuals for the
 last 12 months, from 2021-05 to 2022-04.</p>
-<div id="ymmjfgbtiw" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
-<style>html {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
-}
-
-<p>#ymmjfgbtiw .gt_table { display: table; border-collapse: collapse;
-margin-left: auto; margin-right: auto; color: #333333; font-size: small;
-font-weight: normal; font-style: normal; background-color: #FFFFFF;
-width: auto; border-top-style: solid; border-top-width: 2px;
-border-top-color: #A8A8A8; border-right-style: none; border-right-width:
-2px; border-right-color: #D3D3D3; border-bottom-style: solid;
-border-bottom-width: 2px; border-bottom-color: #A8A8A8;
-border-left-style: none; border-left-width: 2px; border-left-color:
-#D3D3D3; }</p>
-<p>#ymmjfgbtiw .gt_heading { background-color: #FFFFFF; text-align:
-center; border-bottom-color: #FFFFFF; border-left-style: none;
-border-left-width: 1px; border-left-color: #D3D3D3; border-right-style:
-none; border-right-width: 1px; border-right-color: #D3D3D3; }</p>
-<p>#ymmjfgbtiw .gt_title { color: #333333; font-size: 125%; font-weight:
-initial; padding-top: 4px; padding-bottom: 4px; padding-left: 5px;
-padding-right: 5px; border-bottom-color: #FFFFFF; border-bottom-width:
-0; }</p>
-<p>#ymmjfgbtiw .gt_subtitle { color: #333333; font-size: 85%;
-font-weight: initial; padding-top: 0; padding-bottom: 6px; padding-left:
-5px; padding-right: 5px; border-top-color: #FFFFFF; border-top-width: 0;
-}</p>
-<p>#ymmjfgbtiw .gt_bottom_border { border-bottom-style: solid;
-border-bottom-width: 2px; border-bottom-color: #D3D3D3; }</p>
-<p>#ymmjfgbtiw .gt_col_headings { border-top-style: solid;
-border-top-width: 2px; border-top-color: #D3D3D3; border-bottom-style:
-solid; border-bottom-width: 2px; border-bottom-color: #D3D3D3;
-border-left-style: none; border-left-width: 1px; border-left-color:
-#D3D3D3; border-right-style: none; border-right-width: 1px;
-border-right-color: #D3D3D3; }</p>
-<p>#ymmjfgbtiw .gt_col_heading { color: #333333; background-color:
-#FFFFFF; font-size: 100%; font-weight: normal; text-transform: inherit;
-border-left-style: none; border-left-width: 1px; border-left-color:
-#D3D3D3; border-right-style: none; border-right-width: 1px;
-border-right-color: #D3D3D3; vertical-align: bottom; padding-top: 5px;
-padding-bottom: 6px; padding-left: 5px; padding-right: 5px; overflow-x:
-hidden; }</p>
-<p>#ymmjfgbtiw .gt_column_spanner_outer { color: #333333;
-background-color: #FFFFFF; font-size: 100%; font-weight: normal;
-text-transform: inherit; padding-top: 0; padding-bottom: 0;
-padding-left: 4px; padding-right: 4px; }</p>
-<p>#ymmjfgbtiw .gt_column_spanner_outer:first-child { padding-left: 0;
-}</p>
-<p>#ymmjfgbtiw .gt_column_spanner_outer:last-child { padding-right: 0;
-}</p>
-<p>#ymmjfgbtiw .gt_column_spanner { border-bottom-style: solid;
-border-bottom-width: 2px; border-bottom-color: #D3D3D3; vertical-align:
-bottom; padding-top: 5px; padding-bottom: 5px; overflow-x: hidden;
-display: inline-block; width: 100%; }</p>
-<p>#ymmjfgbtiw .gt_group_heading { padding-top: 8px; padding-bottom:
-8px; padding-left: 5px; padding-right: 5px; color: #333333;
-background-color: #FFFFFF; font-size: 100%; font-weight: initial;
-text-transform: inherit; border-top-style: solid; border-top-width: 2px;
-border-top-color: #D3D3D3; border-bottom-style: solid;
-border-bottom-width: 2px; border-bottom-color: #D3D3D3;
-border-left-style: none; border-left-width: 1px; border-left-color:
-#D3D3D3; border-right-style: none; border-right-width: 1px;
-border-right-color: #D3D3D3; vertical-align: middle; }</p>
-<p>#ymmjfgbtiw .gt_empty_group_heading { padding: 0.5px; color: #333333;
-background-color: #FFFFFF; font-size: 100%; font-weight: initial;
-border-top-style: solid; border-top-width: 2px; border-top-color:
-#D3D3D3; border-bottom-style: solid; border-bottom-width: 2px;
-border-bottom-color: #D3D3D3; vertical-align: middle; }</p>
-<p>#ymmjfgbtiw .gt_from_md > :first-child { margin-top: 0; }</p>
-<p>#ymmjfgbtiw .gt_from_md > :last-child { margin-bottom: 0; }</p>
-<p>#ymmjfgbtiw .gt_row { padding-top: 8px; padding-bottom: 8px;
-padding-left: 5px; padding-right: 5px; margin: 10px; border-top-style:
-solid; border-top-width: 1px; border-top-color: #D3D3D3;
-border-left-style: none; border-left-width: 1px; border-left-color:
-#D3D3D3; border-right-style: none; border-right-width: 1px;
-border-right-color: #D3D3D3; vertical-align: middle; overflow-x: hidden;
-}</p>
-<p>#ymmjfgbtiw .gt_stub { color: #333333; background-color: #FFFFFF;
-font-size: 100%; font-weight: initial; text-transform: inherit;
-border-right-style: solid; border-right-width: 2px; border-right-color:
-#D3D3D3; padding-left: 5px; padding-right: 5px; }</p>
-<p>#ymmjfgbtiw .gt_stub_row_group { color: #333333; background-color:
-#FFFFFF; font-size: 100%; font-weight: initial; text-transform: inherit;
-border-right-style: solid; border-right-width: 2px; border-right-color:
-#D3D3D3; padding-left: 5px; padding-right: 5px; vertical-align: top;
-}</p>
-<p>#ymmjfgbtiw .gt_row_group_first td { border-top-width: 2px; }</p>
-<p>#ymmjfgbtiw .gt_summary_row { color: #333333; background-color:
-#FFFFFF; text-transform: inherit; padding-top: 8px; padding-bottom: 8px;
-padding-left: 5px; padding-right: 5px; }</p>
-<p>#ymmjfgbtiw .gt_first_summary_row { border-top-style: solid;
-border-top-color: #D3D3D3; }</p>
-<p>#ymmjfgbtiw .gt_first_summary_row.thick { border-top-width: 2px;
-}</p>
-<p>#ymmjfgbtiw .gt_last_summary_row { padding-top: 8px; padding-bottom:
-8px; padding-left: 5px; padding-right: 5px; border-bottom-style: solid;
-border-bottom-width: 2px; border-bottom-color: #D3D3D3; }</p>
-<p>#ymmjfgbtiw .gt_grand_summary_row { color: #333333; background-color:
-#FFFFFF; text-transform: inherit; padding-top: 8px; padding-bottom: 8px;
-padding-left: 5px; padding-right: 5px; }</p>
-<p>#ymmjfgbtiw .gt_first_grand_summary_row { padding-top: 8px;
-padding-bottom: 8px; padding-left: 5px; padding-right: 5px;
-border-top-style: double; border-top-width: 6px; border-top-color:
-#D3D3D3; }</p>
-<p>#ymmjfgbtiw .gt_striped { background-color: rgba(128, 128, 128,
-0.05); }</p>
-<p>#ymmjfgbtiw .gt_table_body { border-top-style: solid;
-border-top-width: 2px; border-top-color: #D3D3D3; border-bottom-style:
-solid; border-bottom-width: 2px; border-bottom-color: #D3D3D3; }</p>
-<p>#ymmjfgbtiw .gt_footnotes { color: #333333; background-color:
-#FFFFFF; border-bottom-style: none; border-bottom-width: 2px;
-border-bottom-color: #D3D3D3; border-left-style: none;
-border-left-width: 2px; border-left-color: #D3D3D3; border-right-style:
-none; border-right-width: 2px; border-right-color: #D3D3D3; }</p>
-<p>#ymmjfgbtiw .gt_footnote { margin: 0px; font-size: 90%; padding-left:
-4px; padding-right: 4px; padding-left: 5px; padding-right: 5px; }</p>
-<p>#ymmjfgbtiw .gt_sourcenotes { color: #333333; background-color:
-#FFFFFF; border-bottom-style: none; border-bottom-width: 2px;
-border-bottom-color: #D3D3D3; border-left-style: none;
-border-left-width: 2px; border-left-color: #D3D3D3; border-right-style:
-none; border-right-width: 2px; border-right-color: #D3D3D3; }</p>
-<p>#ymmjfgbtiw .gt_sourcenote { font-size: 90%; padding-top: 4px;
-padding-bottom: 4px; padding-left: 5px; padding-right: 5px; }</p>
-<p>#ymmjfgbtiw .gt_left { text-align: left; }</p>
-<p>#ymmjfgbtiw .gt_center { text-align: center; }</p>
-<p>#ymmjfgbtiw .gt_right { text-align: right; font-variant-numeric:
-tabular-nums; }</p>
-<p>#ymmjfgbtiw .gt_font_normal { font-weight: normal; }</p>
-<p>#ymmjfgbtiw .gt_font_bold { font-weight: bold; }</p>
-<p>#ymmjfgbtiw .gt_font_italic { font-style: italic; }</p>
-<p>#ymmjfgbtiw .gt_super { font-size: 65%; }</p>
-<p>#ymmjfgbtiw .gt_two_val_uncert { display: inline-block; line-height:
-1em; text-align: right; font-size: 60%; vertical-align: -0.25em;
-margin-left: 0.1em; }</p>
-<p>#ymmjfgbtiw .gt_footnote_marks { font-style: italic; font-weight:
-normal; font-size: 75%; vertical-align: 0.4em; }</p>
-<p>#ymmjfgbtiw .gt_asterisk { font-size: 100%; vertical-align: 0; }</p>
-<p>#ymmjfgbtiw .gt_slash_mark { font-size: 0.7em; line-height: 0.7em;
-vertical-align: 0.15em; }</p>
-<p>#ymmjfgbtiw .gt_fraction_numerator { font-size: 0.6em; line-height:
-0.6em; vertical-align: 0.45em; }</p>
-<p>#ymmjfgbtiw .gt_fraction_denominator { font-size: 0.6em; line-height:
-0.6em; vertical-align: -0.05em; } </style></p>
-<table class="gt_table">
-  <thead class="gt_header">
-    <tr>
-      <th colspan="3" class="gt_heading gt_title gt_font_normal gt_bottom_border" style>All part-time individuals</th>
-    </tr>
-
-  </thead>
-  <thead class="gt_col_headings">
-    <tr>
-      <th class="gt_col_heading gt_columns_bottom_border gt_left" rowspan="1" colspan="1"></th>
-      <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1">number<sup class="gt_footnote_marks">a</sup></th>
-      <th class="gt_col_heading gt_columns_bottom_border gt_right" rowspan="1" colspan="1">change<sup class="gt_footnote_marks">a</sup></th>
-    </tr>
-  </thead>
-  <tbody class="gt_table_body">
-    <tr class="gt_group_heading_row">
-      <td colspan="3" class="gt_group_heading">2021</td>
-    </tr>
-    <tr class="gt_row_group_first"><td class="gt_row gt_right gt_stub">6</td>
-<td class="gt_row gt_right">4,136.985</td>
-<td class="gt_row gt_right">−18.013 <span style="color:salmon">▼</span></td></tr>
-    <tr><td class="gt_row gt_right gt_stub">7</td>
-<td class="gt_row gt_right">4,142.536</td>
-<td class="gt_row gt_right">5.551 <span style="color:steelblue">▲</span></td></tr>
-    <tr><td class="gt_row gt_right gt_stub">8</td>
-<td class="gt_row gt_right">4,067.428</td>
-<td class="gt_row gt_right">−75.108 <span style="color:salmon">▼</span></td></tr>
-    <tr><td class="gt_row gt_right gt_stub">9</td>
-<td class="gt_row gt_right">3,904.616</td>
-<td class="gt_row gt_right">−162.811 <span style="color:salmon">▼</span></td></tr>
-    <tr><td class="gt_row gt_right gt_stub">10</td>
-<td class="gt_row gt_right">3,893.012</td>
-<td class="gt_row gt_right">−11.604 <span style="color:salmon">▼</span></td></tr>
-    <tr><td class="gt_row gt_right gt_stub">11</td>
-<td class="gt_row gt_right">4,133.553</td>
-<td class="gt_row gt_right">240.541 <span style="color:steelblue">▲</span></td></tr>
-    <tr><td class="gt_row gt_right gt_stub">12</td>
-<td class="gt_row gt_right">4,151.566</td>
-<td class="gt_row gt_right">18.013 <span style="color:steelblue">▲</span></td></tr>
-    <tr class="gt_group_heading_row">
-      <td colspan="3" class="gt_group_heading">2022</td>
-    </tr>
-    <tr class="gt_row_group_first"><td class="gt_row gt_right gt_stub">1</td>
-<td class="gt_row gt_right">4,166.372</td>
-<td class="gt_row gt_right">14.807 <span style="color:steelblue">▲</span></td></tr>
-    <tr><td class="gt_row gt_right gt_stub">2</td>
-<td class="gt_row gt_right">4,146.764</td>
-<td class="gt_row gt_right">−19.608 <span style="color:salmon">▼</span></td></tr>
-    <tr><td class="gt_row gt_right gt_stub">3</td>
-<td class="gt_row gt_right">4,147.151</td>
-<td class="gt_row gt_right">0.386 <span style="color:steelblue">▲</span></td></tr>
-    <tr><td class="gt_row gt_right gt_stub">4</td>
-<td class="gt_row gt_right">4,058.758</td>
-<td class="gt_row gt_right">−88.393 <span style="color:salmon">▼</span></td></tr>
-  </tbody>
-
-  <tfoot class="gt_footnotes">
-    <tr>
-      <td class="gt_footnote" colspan="3"><sup class="gt_footnote_marks">a</sup> Units in 1000s</td>
-    </tr>
-  </tfoot>
+<table>
+<thead>
+<tr class="header">
+<th align="right">year</th>
+<th align="right">month</th>
+<th align="right">number</th>
+<th align="right">change</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="right">2021</td>
+<td align="right">6</td>
+<td align="right">4136.985</td>
+<td align="right">-18.0134506</td>
+</tr>
+<tr class="even">
+<td align="right">2021</td>
+<td align="right">7</td>
+<td align="right">4142.536</td>
+<td align="right">5.5511528</td>
+</tr>
+<tr class="odd">
+<td align="right">2021</td>
+<td align="right">8</td>
+<td align="right">4067.428</td>
+<td align="right">-75.1083494</td>
+</tr>
+<tr class="even">
+<td align="right">2021</td>
+<td align="right">9</td>
+<td align="right">3904.616</td>
+<td align="right">-162.8113361</td>
+</tr>
+<tr class="odd">
+<td align="right">2021</td>
+<td align="right">10</td>
+<td align="right">3893.012</td>
+<td align="right">-11.6043976</td>
+</tr>
+<tr class="even">
+<td align="right">2021</td>
+<td align="right">11</td>
+<td align="right">4133.553</td>
+<td align="right">240.5408697</td>
+</tr>
+<tr class="odd">
+<td align="right">2021</td>
+<td align="right">12</td>
+<td align="right">4151.566</td>
+<td align="right">18.0129317</td>
+</tr>
+<tr class="even">
+<td align="right">2022</td>
+<td align="right">1</td>
+<td align="right">4166.372</td>
+<td align="right">14.8068049</td>
+</tr>
+<tr class="odd">
+<td align="right">2022</td>
+<td align="right">2</td>
+<td align="right">4146.764</td>
+<td align="right">-19.6082631</td>
+</tr>
+<tr class="even">
+<td align="right">2022</td>
+<td align="right">3</td>
+<td align="right">4147.151</td>
+<td align="right">0.3864218</td>
+</tr>
+<tr class="odd">
+<td align="right">2022</td>
+<td align="right">4</td>
+<td align="right">4058.758</td>
+<td align="right">-88.3929598</td>
+</tr>
+</tbody>
 </table>
-</div>
-
 <hr />
 <p>Report last updated on 2022-05-30 from the <a href="https://www.abs.gov.au/statistics/labour/employment-and-unemployment/labour-force-australia/latest-release">ABS
 labour force dataset</a></p>
